--- a/templates/default/service-init.erb
+++ b/templates/default/service-init.erb
@@ -1,21 +1,21 @@
-# MoomBot startup script
+# <%= node['moombot']['name'].capitalize %> startup script
 #chkconfig: 2345 80 05
-#description: MoomBot Daemon
+#description: <%= node['moombot']['name'].capitalize %> Daemon
 
 ### BEGIN INIT INFO
-# Provides:          MoomBot
+# Provides:          <%= node['moombot']['name'].capitalize %>
 # Required-Start:    $local_fs $remote_fs $network $syslog $named
 # Required-Stop:     $local_fs $remote_fs $network $syslog $named
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
 # X-Interactive:     true
-# Short-Description: Start/Stop MoomBot daemon
+# Short-Description: Start/Stop <%= node['moombot']['name'].capitalize %> daemon
 ### END INIT INFO
 
 . /lib/lsb/init-functions
 
-USER=moombot
-BASE=/opt/moombot
+USER=<%= node['moombot']['name'] %>
+BASE=<%= node['moombot']['home'] %>
 RUBY=/opt/chef/embedded/bin/ruby
 
 start() {
@@ -52,7 +52,7 @@ case "$1" in
     RETVAL=$?
     ;;
   *)
-    echo "Usage: moombot-daemon {start|restart|stop|status}"
+    echo "Usage: $0 {start|restart|stop|status}"
     RETVAL=2
     ;;
 esac
