--- a/templates/default/config.rb.erb
+++ b/templates/default/config.rb.erb
@@ -14,12 +14,12 @@ def moombot()
     primary_channel: '<%= node['moombot']['cinch']['primary_channel'] %>',
     ssl: Cinch::Configuration::SSL.new(use: <%= node['moombot']['cinch']['ssl']['use'] %>,
                                        verify: <%= node['moombot']['cinch']['ssl']['verify'] %>),
-    plugins: [<%= node['moombot']['cinch']['plugins'].map {|p| p.capitalize << 'Plugin'}.join ', ' %>]
+    plugins: [<%= node['moombot']['plugins'].map {|p| p.capitalize << 'Plugin'}.join ', ' %>]
   }
 }
 end
 
 plugins_path = File.expand_path('plugins', File.dirname(__FILE__))
-<% node['moombot']['cinch']['plugins'].each do |plugin| %>
+<% node['moombot']['plugins'].each do |plugin| %>
 load File.expand_path('<%= plugin %>.rb', plugins_path)
 <% end %>
