--- a/templates/default/service-init.erb
+++ b/templates/default/service-init.erb
@@ -12,7 +12,13 @@
 # Short-Description: Start/Stop <%= node['moombot']['name'].capitalize %> daemon
 ### END INIT INFO
 
+# Source function library.
+<% case node['platform_family'] -%>
+<% when 'rhel', 'fedora' -%>
+. /etc/rc.d/init.d/functions
+<% else -%>
 . /lib/lsb/init-functions
+<% end -%>
 
 USER=<%= node['moombot']['name'] %>
 BASE=<%= node['moombot']['home'] %>
