--- a/templates/default/service-systemd.erb
+++ b/templates/default/service-systemd.erb
@@ -4,8 +4,8 @@ Description=<%= node['moombot']['name'].capitalize %> Daemon
 [Service]
 User=<%= node['moombot']['name'] %>
 PIDFile=<%= node['moombot']['home'] %>/<%= node['moombot']['name'] %>.pid
-ExecStart=/opt/chef/embedded/bin/ruby <%= node['moombot']['home'] %>/daemon start
-ExecStop=/opt/chef/embedded/bin/ruby <%= node['moombot']['home'] %>/daemon stop
+ExecStart=ruby <%= node['moombot']['home'] %>/daemon start
+ExecStop=ruby <%= node['moombot']['home'] %>/daemon stop
 
 [Install]
 WantedBy=multi-user.target
