Improve configuration template

--- a/templates/default/config.rb.erb
+++ b/templates/default/config.rb.erb
@@ -1,15 +1,15 @@
 def moombot()
 {
-  'name' => '<%= node['moombot']['name'] %>',
-  'home' => '<%= node['moombot']['home'] %>',
-  'cinch' => <%= node['moombot']['cinch'] %>,
-  'plugins' => <%= node['moombot']['plugin_list'] %>,
-  'loggers' => <%= node['moombot']['loggers'] %>
+  'name' => '<%= @name %>',
+  'home' => '<%= @home %>',
+  'cinch' => <%= @cinch %>,
+  'plugins' => <%= @plugins %>,
+  'loggers' => <%= @loggers %>
 }
 end
 
 plugins_path = File.expand_path('plugins', File.dirname(__FILE__))
-<% node['moombot']['plugin_list'].each do |plugin| %>
+<% @plugins.each do |plugin| %>
 <% if node['moombot']["plugin_#{plugin}"] %>
 def moombot_<%= plugin %>()
 <%= node['moombot']["plugin_#{plugin}"] %>
