Don't install ruby, use node[languages][ruby] attributes

--- a/templates/default/daemon.erb
+++ b/templates/default/daemon.erb
@@ -1,4 +1,4 @@
-#!/usr/bin/env ruby
+#!<%= node['languages']['ruby']['ruby_bin'] %>
 # Cookbook:: moombot
 # File:: daemon.rb
 # Copyright:: 2015-2020 Sliim
